// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test: Tag[site/pages/components/Tag/example-1-base.js] 1`] = `
<div>
  <div>
    <span>
      Tag 1
    </span>
  </div>
  <div>
    <span>
      Tag 2
    </span>
  </div>
  <div>
    <div>
      <span>
        Tag 3
      </span>
    </div>
    <div>
      <svg>
        <path />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Tag[site/pages/components/Tag/example-2-type.js] 1`] = `
<div>
  <div>
    <span>
      Default
    </span>
  </div>
  <div>
    <span>
      Success
    </span>
  </div>
  <div>
    <span>
      Info
    </span>
  </div>
  <div>
    <span>
      Warning
    </span>
  </div>
  <div>
    <span>
      Danger
    </span>
  </div>
</div>
`;

exports[`Snapshot test: Tag[site/pages/components/Tag/example-3-bgcolor.js] 1`] = `
<div>
  <div>
    <span>
      #eeeeee
    </span>
  </div>
  <div>
    <span>
      #613400
    </span>
  </div>
  <div>
    <span>
      #f50
    </span>
  </div>
  <div>
    <span>
      #87d068
    </span>
  </div>
</div>
`;

exports[`Snapshot test: Tag[site/pages/components/Tag/example-4-close.js] 1`] = `
<div>
  <div>
    <div>
      <span>
        onClose=true
      </span>
    </div>
    <div>
      <svg>
        <path />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <span>
        onClose=function
      </span>
    </div>
    <div>
      <svg>
        <path />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <span>
        onClose=promise
      </span>
    </div>
    <div>
      <svg>
        <path />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Tag[site/pages/components/Tag/example-5-disabled.js] 1`] = `
<div>
  <div>
    <span>
      Tag 1
    </span>
  </div>
  <div>
    <span>
      Tag 2
    </span>
  </div>
  <div>
    <div>
      <span>
        Tag 3
      </span>
    </div>
    <div>
      <svg>
        <path />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Tag[site/pages/components/Tag/example-6-dynamic.js] 1`] = `
<div>
  <div>
    <div>
      <span>
        Tag 1
      </span>
    </div>
    <div>
      <svg>
        <path />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <span>
        Tag 2
      </span>
    </div>
    <div>
      <svg>
        <path />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <span>
        Tag 3
      </span>
    </div>
    <div>
      <svg>
        <path />
      </svg>
    </div>
  </div>
  <div>
    <span>
      + New Tag
    </span>
  </div>
</div>
`;

exports[`Snapshot test: Tag[site/pages/components/Tag/example-7-editable.js] 1`] = `
<div>
  <div>
    <div>
      <span>
        abc
      </span>
    </div>
    <div>
      <svg>
        <path />
      </svg>
    </div>
  </div>
</div>
`;
